--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </div>
             <div class="spec">
                 <span class="spec-label">Platform</span>
-                <span class="spec-value">Puck.js</span>
+                <span class="spec-value">Espruino</span>
             </div>
         </div>
     </header>
@@ -300,16 +300,17 @@
                     <span class="link-desc">Upload firmware via WebBLE</span>
                     <span class="link-status">Active</span>
                 </a>
-                <a href="src/web/GAMBIT/collector.html" class="link-row">
-                    <span class="link-name">Data Collector</span>
-                    <span class="link-desc">Labeled gesture collection for ML training</span>
-                    <span class="link-status">Active</span>
-                </a>
                 <a href="src/web/GAMBIT/" class="link-row">
                     <span class="link-name">GAMBIT Interface</span>
                     <span class="link-desc">Real-time sensor visualization</span>
                     <span class="link-status">Active</span>
                 </a>
+                <a href="src/web/GAMBIT/collector.html" class="link-row">
+                    <span class="link-name">GAMBIT Collector</span>
+                    <span class="link-desc">Labeled gesture collection for ML training</span>
+                    <span class="link-status">Active</span>
+                </a>
+                
             </div>
         </section>
 
@@ -321,11 +322,6 @@
                     <span class="link-desc">Composite views, per-second windows, 3D trajectories</span>
                     <span class="link-status">Active</span>
                 </a>
-                <a href="visualizations/explorer.html" class="link-row">
-                    <span class="link-name">Unified Explorer</span>
-                    <span class="link-desc">Interactive canvas with clustering and labeling</span>
-                    <span class="link-status">Active</span>
-                </a>
             </div>
         </section>
 
@@ -333,7 +329,7 @@
             <div class="section-header">Documentation</div>
             <div class="links">
                 <a href="docs/" class="link-row">
-                    <span class="link-name">Docs Index</span>
+                    <span class="link-name">Docs</span>
                     <span class="link-desc">Implementation and system architecture</span>
                     <span class="link-status">Docs</span>
                 </a>
@@ -343,7 +339,7 @@
                     <span class="link-status">Active</span>
                 </a>
                 <a href="docs/design/" class="link-row">
-                    <span class="link-name">Design Research</span>
+                    <span class="link-name">Design/Research</span>
                     <span class="link-desc">Vision analysis, roadmap, proposals</span>
                     <span class="link-status">Design</span>
                 </a>
@@ -366,6 +362,7 @@
                 <a href="src/web/P0/" class="inline-link">P0</a>
                 <a href="src/web/JOYPAD/" class="inline-link">JOYPAD</a>
                 <a href="src/web/FFO$$/" class="inline-link">FFO$$</a>
+                <a href="src/web/GAMBIT/about-synth" class="inline-link">WAND</a>
             </div>
         </section>
     </main>
@@ -374,7 +371,7 @@
         <span>SIMCAP · Gesture Recognition from IMU Data</span>
         <div class="footer-links">
             <a href="https://github.com/<redacted>/simcap">GitHub</a>
-            <a href="https://www.puck-js.com/">Puck.js</a>
+            <a href="https://www.espruino.com/">Espruino</a>
         </div>
     </footer>
 </body>
