--- a/src/web/VIZ/index.html
+++ b/src/web/VIZ/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIMCAP Data Visualization Explorer</title>
-    <link rel="stylesheet" href="../src/simcap.css">
+    <link rel="stylesheet" href="../../simcap.css">
     <style>
         /* Visualization-specific overrides maintaining brutalist aesthetic */
         body {
@@ -531,7 +531,7 @@
         <img class="modal-content" id="modal-image">
     </div>
 
-    <script src="../../visualizations/session-data.js"></script>
+    <script src="../../../../visualizations/session-data.js"></script>
 
     <script>
 
@@ -685,97 +685,97 @@
                 
                 if (viewSettings.showWinComposite) {
                     html += `<div class="trajectory-card" data-type="composite" onclick="openModal('${w.filepath}')">
-                        <img src="${w.filepath}" class="trajectory-image" alt="Composite">
+                        <img src="../../../visualizations/${w.filepath}" class="trajectory-image" alt="Composite">
                         <div class="trajectory-label">Composite</div>
                     </div>`;
                 }
                 if (w.images.timeseries_accel && viewSettings.showWinAccelTime) {
                     html += `<div class="trajectory-card" data-type="accel-time" onclick="openModal('${w.images.timeseries_accel}')">
-                        <img src="${w.images.timeseries_accel}" class="trajectory-image" alt="Accel Time">
+                        <img src="../../../visualizations/${w.images.timeseries_accel}" class="trajectory-image" alt="Accel Time">
                         <div class="trajectory-label">Accel Time</div>
                     </div>`;
                 }
                 if (w.images.timeseries_gyro && viewSettings.showWinGyroTime) {
                     html += `<div class="trajectory-card" data-type="gyro-time" onclick="openModal('${w.images.timeseries_gyro}')">
-                        <img src="${w.images.timeseries_gyro}" class="trajectory-image" alt="Gyro Time">
+                        <img src="../../../visualizations/${w.images.timeseries_gyro}" class="trajectory-image" alt="Gyro Time">
                         <div class="trajectory-label">Gyro Time</div>
                     </div>`;
                 }
                 if (w.images.timeseries_mag && viewSettings.showWinMagTime) {
                     html += `<div class="trajectory-card" data-type="mag-time" onclick="openModal('${w.images.timeseries_mag}')">
-                        <img src="${w.images.timeseries_mag}" class="trajectory-image" alt="Mag Time">
+                        <img src="../../../visualizations/${w.images.timeseries_mag}" class="trajectory-image" alt="Mag Time">
                         <div class="trajectory-label">Mag Time</div>
                     </div>`;
                 }
                 if (w.images.trajectory_accel_3d && viewSettings.showWinAccel3d) {
                     html += `<div class="trajectory-card" data-type="accel-3d" onclick="openModal('${w.images.trajectory_accel_3d}')">
-                        <img src="${w.images.trajectory_accel_3d}" class="trajectory-image" alt="Accel 3D">
+                        <img src="../../../visualizations/${w.images.trajectory_accel_3d}" class="trajectory-image" alt="Accel 3D">
                         <div class="trajectory-label">Accel 3D</div>
                     </div>`;
                 }
                 if (w.images.trajectory_gyro_3d && viewSettings.showWinGyro3d) {
                     html += `<div class="trajectory-card" data-type="gyro-3d" onclick="openModal('${w.images.trajectory_gyro_3d}')">
-                        <img src="${w.images.trajectory_gyro_3d}" class="trajectory-image" alt="Gyro 3D">
+                        <img src="../../../visualizations/${w.images.trajectory_gyro_3d}" class="trajectory-image" alt="Gyro 3D">
                         <div class="trajectory-label">Gyro 3D</div>
                     </div>`;
                 }
                 if (w.images.trajectory_mag_3d && viewSettings.showWinMag3d) {
                     html += `<div class="trajectory-card" data-type="mag-3d" onclick="openModal('${w.images.trajectory_mag_3d}')">
-                        <img src="${w.images.trajectory_mag_3d}" class="trajectory-image" alt="Mag 3D">
+                        <img src="../../../visualizations/${w.images.trajectory_mag_3d}" class="trajectory-image" alt="Mag 3D">
                         <div class="trajectory-label">Mag 3D</div>
                     </div>`;
                 }
                 if (w.images.trajectory_combined_3d && viewSettings.showWinCombined3d) {
                     html += `<div class="trajectory-card" data-type="combined-3d" onclick="openModal('${w.images.trajectory_combined_3d}')">
-                        <img src="${w.images.trajectory_combined_3d}" class="trajectory-image" alt="Combined 3D">
+                        <img src="../../../visualizations/${w.images.trajectory_combined_3d}" class="trajectory-image" alt="Combined 3D">
                         <div class="trajectory-label">Combined 3D</div>
                     </div>`;
                 }
                 if (w.images.signature && viewSettings.showWinSignature) {
                     html += `<div class="trajectory-card" data-type="signature" onclick="openModal('${w.images.signature}')">
-                        <img src="${w.images.signature}" class="trajectory-image" alt="Signature">
+                        <img src="../../../visualizations/${w.images.signature}" class="trajectory-image" alt="Signature">
                         <div class="trajectory-label">Signature</div>
                     </div>`;
                 }
                 if (w.images.stats && viewSettings.showWinStats) {
                     html += `<div class="trajectory-card" data-type="stats" onclick="openModal('${w.images.stats}')">
-                        <img src="${w.images.stats}" class="trajectory-image" alt="Stats">
+                        <img src="../../../visualizations/${w.images.stats}" class="trajectory-image" alt="Stats">
                         <div class="trajectory-label">Stats</div>
                     </div>`;
                 }
                 if (w.trajectory_images && w.trajectory_images.raw && viewSettings.showWinTrajRaw) {
                     html += `<div class="trajectory-card" data-type="traj-raw" onclick="openModal('${w.trajectory_images.raw}')">
-                        <img src="${w.trajectory_images.raw}" class="trajectory-image" alt="Traj Raw">
+                        <img src="../../../visualizations/${w.trajectory_images.raw}" class="trajectory-image" alt="Traj Raw">
                         <div class="trajectory-label">Traj Raw</div>
                     </div>`;
                 }
                 if (w.trajectory_images && w.trajectory_images.iron && viewSettings.showWinTrajIron) {
                     html += `<div class="trajectory-card" data-type="traj-iron" onclick="openModal('${w.trajectory_images.iron}')">
-                        <img src="${w.trajectory_images.iron}" class="trajectory-image" alt="Traj Iron">
+                        <img src="../../../visualizations/${w.trajectory_images.iron}" class="trajectory-image" alt="Traj Iron">
                         <div class="trajectory-label">Traj Iron</div>
                     </div>`;
                 }
                 if (w.trajectory_images && w.trajectory_images.fused && viewSettings.showWinTrajFused) {
                     html += `<div class="trajectory-card" data-type="traj-fused" onclick="openModal('${w.trajectory_images.fused}')">
-                        <img src="${w.trajectory_images.fused}" class="trajectory-image" alt="Traj Fused">
+                        <img src="../../../visualizations/${w.trajectory_images.fused}" class="trajectory-image" alt="Traj Fused">
                         <div class="trajectory-label">Traj Fused</div>
                     </div>`;
                 }
                 if (w.trajectory_images && w.trajectory_images.filtered && viewSettings.showWinTrajFiltered) {
                     html += `<div class="trajectory-card" data-type="traj-filtered" onclick="openModal('${w.trajectory_images.filtered}')">
-                        <img src="${w.trajectory_images.filtered}" class="trajectory-image" alt="Traj Filtered">
+                        <img src="../../../visualizations/${w.trajectory_images.filtered}" class="trajectory-image" alt="Traj Filtered">
                         <div class="trajectory-label">Traj Filtered</div>
                     </div>`;
                 }
                 if (w.trajectory_images && w.trajectory_images.combined && viewSettings.showWinTrajCombined) {
                     html += `<div class="trajectory-card" data-type="traj-combined" onclick="openModal('${w.trajectory_images.combined}')">
-                        <img src="${w.trajectory_images.combined}" class="trajectory-image" alt="Traj Combined">
+                        <img src="../../../visualizations/${w.trajectory_images.combined}" class="trajectory-image" alt="Traj Combined">
                         <div class="trajectory-label">Traj Combined</div>
                     </div>`;
                 }
                 if (w.trajectory_images && w.trajectory_images.statistics && viewSettings.showWinTrajStats) {
                     html += `<div class="trajectory-card" data-type="traj-stats" onclick="openModal('${w.trajectory_images.statistics}')">
-                        <img src="${w.trajectory_images.statistics}" class="trajectory-image" alt="Traj Stats">
+                        <img src="../../../visualizations/${w.trajectory_images.statistics}" class="trajectory-image" alt="Traj Stats">
                         <div class="trajectory-label">Traj Stats</div>
                     </div>`;
                 }
@@ -872,13 +872,13 @@
                     <div class="session-content">
                         <div class="image-section composite-section ${viewSettings.showComposite ? '' : 'hidden'}">
                             <h3 class="section-title">Composite Session View</h3>
-                            <img src="${session.composite_image}" class="composite-image" onclick="openModal(this.src)" alt="Composite view">
+                            <img src="../../../visualizations/${session.composite_image}" class="composite-image" onclick="openModal(this.src)" alt="Composite view">
                         </div>
 
                         ${session.calibration_stages_image ? `
                         <div class="image-section calibration-section ${viewSettings.showCalibration ? '' : 'hidden'}">
                             <h3 class="section-title">Magnetometer Calibration Stages</h3>
-                            <img src="${session.calibration_stages_image}" class="composite-image" onclick="openModal(this.src)" alt="Calibration stages comparison">
+                            <img src="../../../visualizations/${session.calibration_stages_image}" class="composite-image" onclick="openModal(this.src)" alt="Calibration stages comparison">
                         </div>
                         ` : ''}
 
@@ -888,37 +888,37 @@
                             <div class="trajectory-grid">
                                 ${session.trajectory_comparison_images.raw && viewSettings.showWinTrajRaw ? `
                                 <div class="trajectory-card" data-type="raw" onclick="openModal('${session.trajectory_comparison_images.raw}')">
-                                    <img src="${session.trajectory_comparison_images.raw}" class="trajectory-image" alt="Raw trajectory">
+                                    <img src="../../../visualizations/${session.trajectory_comparison_images.raw}" class="trajectory-image" alt="Raw trajectory">
                                     <div class="trajectory-label">Raw</div>
                                 </div>
                                 ` : ''}
                                 ${session.trajectory_comparison_images.iron && viewSettings.showWinTrajIron ? `
                                 <div class="trajectory-card" data-type="iron" onclick="openModal('${session.trajectory_comparison_images.iron}')">
-                                    <img src="${session.trajectory_comparison_images.iron}" class="trajectory-image" alt="Iron corrected trajectory">
+                                    <img src="../../../visualizations/${session.trajectory_comparison_images.iron}" class="trajectory-image" alt="Iron corrected trajectory">
                                     <div class="trajectory-label">Iron Corrected</div>
                                 </div>
                                 ` : ''}
                                 ${session.trajectory_comparison_images.fused && viewSettings.showWinTrajFused ? `
                                 <div class="trajectory-card" data-type="fused" onclick="openModal('${session.trajectory_comparison_images.fused}')">
-                                    <img src="${session.trajectory_comparison_images.fused}" class="trajectory-image" alt="Fused trajectory">
+                                    <img src="../../../visualizations/${session.trajectory_comparison_images.fused}" class="trajectory-image" alt="Fused trajectory">
                                     <div class="trajectory-label">Fused</div>
                                 </div>
                                 ` : ''}
                                 ${session.trajectory_comparison_images.filtered && viewSettings.showWinTrajFiltered ? `
                                 <div class="trajectory-card" data-type="filtered" onclick="openModal('${session.trajectory_comparison_images.filtered}')">
-                                    <img src="${session.trajectory_comparison_images.filtered}" class="trajectory-image" alt="Filtered trajectory">
+                                    <img src="../../../visualizations/${session.trajectory_comparison_images.filtered}" class="trajectory-image" alt="Filtered trajectory">
                                     <div class="trajectory-label">Filtered</div>
                                 </div>
                                 ` : ''}
                                 ${session.trajectory_comparison_images.combined && viewSettings.showWinTrajCombined ? `
                                 <div class="trajectory-card" data-type="combined" onclick="openModal('${session.trajectory_comparison_images.combined}')">
-                                    <img src="${session.trajectory_comparison_images.combined}" class="trajectory-image" alt="Combined overlay">
+                                    <img src="../../../visualizations/${session.trajectory_comparison_images.combined}" class="trajectory-image" alt="Combined overlay">
                                     <div class="trajectory-label">Combined Overlay</div>
                                 </div>
                                 ` : ''}
                                 ${session.trajectory_comparison_images.statistics && viewSettings.showWinTrajStats ? `
                                 <div class="trajectory-card" data-type="statistics" onclick="openModal('${session.trajectory_comparison_images.statistics}')">
-                                    <img src="${session.trajectory_comparison_images.statistics}" class="trajectory-image" alt="Statistics">
+                                    <img src="../../../visualizations/${session.trajectory_comparison_images.statistics}" class="trajectory-image" alt="Statistics">
                                     <div class="trajectory-label">Statistics</div>
                                 </div>
                                 ` : ''}
@@ -935,7 +935,7 @@
                             <h3 class="section-title">Raw Axis & Orientation Views</h3>
                             <div class="raw-images">
                                 ${session.raw_images.map(img => `
-                                    <img src="${img}" class="raw-image" onclick="openModal(this.src)" alt="Raw axis view">
+                                    <img src="../../../visualizations/${img}" class="raw-image" onclick="openModal(this.src)" alt="Raw axis view">
                                 `).join('')}
                             </div>
                         </div>
@@ -996,7 +996,7 @@
             const modal = document.getElementById('image-modal');
             const modalImg = document.getElementById('modal-image');
             modal.classList.add('active');
-            modalImg.src = imageSrc;
+            modalImg.src = imageSrc.indexOf('http') === 0 ? imageSrc : `../../../visualizations/${imageSrc}`
         }
 
         function closeModal() {
